--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 </ul>
             </div>
             <!-- Rooms -->
-            <div class="rooms">
+            <div6 class="rooms">
                 <div class="title">
                     <h2>ROOMS</h2>
                     <p>棲家</p>
@@ -475,7 +475,7 @@
                     <button>更多房型介紹</button>
                     <div class="arrow"></div>
                 </div>
-            </div>
+            </div6>
             <!-- Dining -->
             <div class="dining">
                 <div class="wrap">
@@ -646,12 +646,12 @@
                 console.log(params)
                 if (params == '') {
                     console.log(1)
-               
-                    sessionStorage['params'] = '1';    
-                    $(function(){
+
+                    sessionStorage['params'] = '1';
+                    $(function() {
                         $(".start_bg").addClass("on");
-                    $(".start_ad").addClass("on");
-                    })          
+                        $(".start_ad").addClass("on");
+                    })
                 }
 
                 function showMenu() {
