--- a/index.html
+++ b/index.html
@@ -66,62 +66,74 @@
             </div>
             <div class="menu_bg">
                 <div class="wrap">
-                    <div class="img">
-                        <!-- <img src="img/menu_bg__23K07p125u.jpg" alt=""> -->
+                    <div class="header_box">
+                        <div class="language_box">
+                            <h2>Language</h2>
+                            <p>></p>
+                            <ul class="language_list">
+                                <li>繁</li>
+                                <li>EN</li>
+                            </ul>
+                        </div>
+                        <div class="message_box">
+                            <img src="img/mail.png" alt="">
+                            <h2>聯絡我們</h2>
+                        </div>
                     </div>
-
-                    <ul>
-                        <li>
-                            <h2>Hotel Introduction</h2>
-                            <p>飯店簡介</p>
-                        </li>
-                        <li>
-                            <h2>Service Facilities</h2>
-                            <p>服務設施</p>
-                        </li>
-                        <li>
-                            <h2>Room Introduction</h2>
-                            <p>客房介紹</p>
-                        </li>
-                        <li>
-                            <h2>Traffic Location</h2>
-                            <p>交通位置</p>
-                        </li>
-                        <li>
-                            <h2>News and Events</h2>
-                            <p>新訊與活動</p>
-                        </li>
-                        <li>
-                            <h2>Contact us</h2>
-                            <p>聯絡我們</p>
-                        </li>
-                    </ul>
-                    <div class="top_box">
-                        <div class="message address">
-                            <h2>ADD.</h2>
-                            <p>苗栗縣通霄鎮南和里165-5號</p>
-                        </div>
-                        <div class="message tel">
-                            <h2>TEL.</h2>
-                            <p>037-783-899</p>
-                        </div>
-                        <div class="message">
-                            <h2>FAX.</h2>
-                            <p>037-783-288</p>
-                        </div>
-                        <div class="message email">
-                            <h2>EMAIL.</h2>
-                            <p>service@woodland.com.tw</p>
-                        </div>
-                        <div class="message">
-                            <div class="img">
-                                <i class="fa fa-facebook-square"></i>
-                                <i class="fa fa-instagram"></i>
-                                <i class="fa-brands fa-line"></i>
+                    <div class="menu_bg_list">
+                        <ul>
+                            <li>
+                                <h2>Hotel Introduction</h2>
+                                <p>飯店簡介</p>
+                            </li>
+                            <li>
+                                <h2>Service Facilities</h2>
+                                <p>服務設施</p>
+                            </li>
+                            <li>
+                                <h2>Room Introduction</h2>
+                                <p>客房介紹</p>
+                            </li>
+                            <li>
+                                <h2>Traffic Location</h2>
+                                <p>交通位置</p>
+                            </li>
+                            <li>
+                                <h2>News and Events</h2>
+                                <p>新訊與活動</p>
+                            </li>
+                            <li>
+                                <h2>Contact us</h2>
+                                <p>聯絡我們</p>
+                            </li>
+                        </ul>
+                        <div class="top_box">
+                            <div class="message address">
+                                <h2>ADD.</h2>
+                                <p>苗栗縣通霄鎮南和里165-5號</p>
                             </div>
-                        </div>
-                        <div class="message">
-                            <p>Copyright © 2024 舞牛森度假飯店 All Rights Reserved.</p>
+                            <div class="message tel">
+                                <h2>TEL.</h2>
+                                <p>037-783-899</p>
+                            </div>
+                            <div class="message">
+                                <h2>FAX.</h2>
+                                <p>037-783-288</p>
+                            </div>
+                            <div class="message email">
+                                <h2>EMAIL.</h2>
+                                <p>service@woodland.com.tw</p>
+                            </div>
+                            <div class="message">
+                                <div class="img">
+                                    <i class="fa fa-facebook-square"></i>
+                                    <i class="fa fa-instagram"></i>
+                                    <i class="fa-brands fa-line"></i>
+                                </div>
+                            </div>
+                            <div class="message">
+                                <p>Copyright © 2024 舞牛森度假飯店 All Rights Reserved.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -635,7 +647,7 @@
                 <div class="dining_title_m">
                     <h2>DINING</h2>
                     <p>饗宴</p>
-                    
+
                 </div>
                 <div class="wrap">
                     <ul class="dining_list">
@@ -786,6 +798,11 @@
                                 <li>新訊與活動</li>
                                 <li>聯絡我們</li>
                             </ul>
+                            <div class="txt">
+                                <p>Copyright © 2024 舞牛森度假飯店 All Rights Reserved.</p>
+                                <div class="writer">
+                                    <h3>Design</h3> by <span>iBest</span></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -834,8 +851,6 @@
                 var params = sessionStorage['params'] || '';
                 console.log(params)
                 if (params == '') {
-                    console.log(1)
-
                     sessionStorage['params'] = '1';
                     $(function() {
                         $(".start_bg").addClass("on");
@@ -850,6 +865,12 @@
 
                     } else {
                         $(".header").removeClass("on");
+                    }
+                    if ($(window).scrollTop() > 150) {
+                        $(".header_m").addClass("on");
+
+                    } else {
+                        $(".header_m").removeClass("on");
                     }
                     if ($(window).scrollTop() > 400) {
                         $(".brand_txt").addClass("on");
