--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                                     <h2>同事</h2>
                                     <p>Conference</p>
                                 </div>
-                                <p>離開辦公室、辦公桌，接近自然也能辦公事。</p>
+                                <p class="event_txt">離開辦公室、辦公桌，接近自然也能辦公事。</p>
                             </div>
                             <div class="event_about">
                                 <button>了解更多</button>
