--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         </div>
 
                         <h1>舞牛森旅</h1>
-                        <h2>森青身輕 翩翩而舞 Woods are refreshing</h2>
+                        <h2>――――― 森青身輕 翩翩而舞<span> Woods are refreshing</span></h2>
                     </li>
                     <li>
                         <p>02/04</p>
@@ -205,7 +205,7 @@
                         </div>
 
                         <h1>舞牛森旅</h1>
-                        <h2>森青身輕 翩翩而舞 Woods are refreshing</h2>
+                        <h2>――――― 森青身輕 翩翩而舞<span> Woods are refreshing</span></h2>
                     </li>
                     <li>
                         <p>03/04</p>
@@ -214,7 +214,7 @@
                         </div>
 
                         <h1>舞牛森旅</h1>
-                        <h2>森青身輕 翩翩而舞 Woods are refreshing</h2>
+                        <h2>――――― 森青身輕 翩翩而舞<span> Woods are refreshing</span></h2>
                     </li>
                     <li>
                         <p>04/04</p>
@@ -223,7 +223,7 @@
                         </div>
 
                         <h1>舞牛森旅</h1>
-                        <h2>森青身輕 翩翩而舞 Woods are refreshing</h2>
+                        <h2>――――― 森青身輕 翩翩而舞<span> Woods are refreshing</span></h2>
                     </li>
                 </ul>
 
@@ -244,8 +244,6 @@
                     <div class="wrap">
                         <p>依據歐盟施行的個人資料保護法，我們致力於保護您的個人資料並提供您對個人資料的掌握。 </p>
                         <p>按一下「全部接受」，代表您允許我們置放 Cookie 來提升您在本網站上的使用體驗、協助我們分析網站效能和使用狀況，以及讓我們投放相關聯的行銷內容。您可以在下方管理 Cookie 設定。 按一下「確認」即代表您同意採用目前的設定。</p>
-
-
                     </div>
                     <div class="hd_about">
                         <div class="cookies">
@@ -410,7 +408,7 @@
                                     <h2>同事</h2>
                                     <p>Conference</p>
                                 </div>
-                                <p class="event_txt">離開辦公室、辦公桌，接近自然也能辦公事。</p>
+                                <p >離開辦公室、辦公桌，接近自然也能辦公事。</p>
                             </div>
                             <div class="event_about">
                                 <button>了解更多</button>
@@ -907,10 +905,7 @@
                     } else {
                         $(".environment").removeClass("on");
                     }
-
-
-
-
+                    
                     if ($(window).scrollTop() > 2500) {
                         $(".events").addClass("on");
                         $(".serve").addClass("on");
@@ -1096,8 +1091,6 @@
                         adaptiveHeight: true,
                     });
                 });
-
-
                 onMounted(() => {});
                 return {};
             },
