--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- menu_bg -->
             <div class="menu_bg">
                 <div class="wrap">
-                    <div class="header_box">
+                    <div class="menu_box">
                         <div class="language_box">
                             <h2>Language</h2>
                             <p>></p>
@@ -885,9 +885,6 @@
                     $(".all_allow_button").on("click", function() {
                         $(".privacy_option").removeClass("on");
                         $(".remind").toggleClass("off");
-                    });
-                    $(".language_box").on("click", function() {
-                        $(".language_list").toggleClass("on");
                     });
                     $(".hd_about").on("click", function() {
                         $(".privacy_option").toggleClass("on");
